--- a/public/assets/i18n/translations/en.json
+++ b/public/assets/i18n/translations/en.json
@@ -43,6 +43,8 @@
     "ResetAccountKeyInstruction_Timing": "Resetting account key usually takes 5 to 30 minutes. In some situations, it may take longer. Please be patient.",
     "ResetAccountKeyInstruction_Fee_1": "We charge ",
     "ResetAccountKeyInstruction_Fee_2": " for resetting account key.",
+    "ResetApiKeyInstruction_1": "Resetting API key is free and instant.",
+    "ResetApiKeyInstruction_2": "Once you reset your API key, you will get a new one and the previous one will be invalid.",
     "WelcomeBack": "Welcome back to Loopring Exchange!",
     "UnsupportedNetworkWarning": "You are on a wrong network! Please switch to ",
     "EthereumMainNet": "Ethereum mainnet.",
@@ -55,6 +57,8 @@
     "AccountRegistrationFailedNotification": "Something went wrong. Please try to register again!",
     "AccountKeyResetNotification": "Your account key is resetting. Usually it takes 5 to 30 minutes; but in some situations, it may take longer. You can make deposits while waiting.",
     "AccountKeyResetFailedNotification": "Something went wrong. Please try to reset again!",
+    "ApiKeyResetNotification": "Reset API key successfully.",
+    "ApiKeyResetFailedNotification": "Failed to reset API key, please try again.",
     "Web3 Unavailable": "MetaMask Unavailable",
     "Web3UnavailableTip": "You need MetaMask installed before using Loopring Exchange!",
     "ConnectToWeb3Tip": "Connect to your Ethereum account to start using Loopring Exchange.",
