--- a/public/assets/i18n/translations/zh.json
+++ b/public/assets/i18n/translations/zh.json
@@ -67,6 +67,7 @@
     "Order Price": "订单价格",
     "Fill Price": "成交价",
     "Reset Account Key": "重置账号秘钥",
+    "Reset API Key": "重置API密钥",
     "Try to login again?": "尝试再次登录？",
     "Balance": "账号余额",
     "Side": "方向",
@@ -146,6 +147,8 @@
     "ResetAccountKeyInstruction_Timing": "重置账号秘钥一般需要5到30分钟。有些情况下则需要一两个小时。请您耐心等待。",
     "ResetAccountKeyInstruction_Fee_1": "重置账号秘钥费用：",
     "ResetAccountKeyInstruction_Fee_2": "。",
+    "ResetApiKeyInstruction_1": "重置API密钥是免费且即时的。",
+    "ResetApiKeyInstruction_2": "重置API密钥后，您将获得一个新密钥，而先前的密钥将无效。",
     "WelcomeBack": "欢迎来路印交易！",
     "UnsupportedNetworkWarning": "您目前处在我们不支持的网络上。请切换到",
     "EthereumMainNet": "以太坊主网。",
@@ -164,6 +167,8 @@
     "AccountRegistrationFailedNotification": "出了点问题，我们没能帮您成功注册账号。请再试一次！",
     "AccountKeyResetNotification": "我们正在为您重置账号秘钥，这个过程一般需要5到30分钟，有些情况下则需要一两个小时。在等待的过程中您可以对账号进行充值。",
     "AccountKeyResetFailedNotification": "出了点问题，我们没能帮您成功重置账号秘钥。请再试一次！",
+    "ApiKeyResetNotification": "重置API密钥成功。",
+    "ApiKeyResetFailedNotification": "重置API密钥失败，请再试一次。",
     "Failed to connect to WalletConnect!": "连接WalletConnect失败！",
     "Failed to connect to MetaMask!": "连接MetaMask失败！",
     "Web3 Unavailable": "没有安装MetaMask",
