--- a/public/assets/i18n/translations/zh.json
+++ b/public/assets/i18n/translations/zh.json
@@ -35,14 +35,12 @@
     "Language": "语言",
     "Make a Deposit": "充值",
     "Make a Withdrawal": "提现",
-    "Register Account": "注册账号",
-    "Registration": "注册账号",
-    "Key Reset":"重置秘钥",
+    "Activate Layer-2": "激活二层账号",
+    "Reset Layer-2 Keypair":"重置二层账号秘钥",
     "Export Account": "导出账号",
-    "Login": "登录",
-    "Logout": "退出登录",
-    "Logging out...": "正在退出登录...",
-    "Logging in...": "正在登录...",
+    "Unlock": "解锁",
+    "Lock": "锁定",
+    "Locking...": "正在锁定二层账号...",
     "Settings": "设置",
     "Order Book": "订单簿",
     "Trading View": "交易图",
@@ -66,12 +64,15 @@
     "Total": "成交额",
     "Order Price": "订单价格",
     "Fill Price": "成交价",
-    "Reset Account Key": "重置账号秘钥",
     "Reset API Key": "重置API密钥",
-    "Try to login again?": "尝试再次登录？",
+    "Try to unlock again?": "尝试再次解锁？",
     "Balance": "账号余额",
     "Side": "方向",
+    "Reward Token": "奖励代币",
+    "Max Spread": "最大价差比",
+    "Activity Time": "活动时间",
     "Amount": "数量",
+    "My Amount": "我的数量",
     "Amount Withdrawn": "提现金额",
     "Amount Requested": "请求金额",
     "Fee": "手续费",
@@ -99,10 +100,10 @@
     "Cancel": "取消",
     "Fill Pctg": "成交比例",
     "My Address": "我的地址",
-    "Balance on Loopring": "交易账号余额",
-    "Balance on Ethereum": "以太坊上余额",
-    "Yes, log me out.": "退出登录",
-    "Funds on hold": "锁定金额",
+    "Layer-2 Balance": "二层账号余额",
+    "Layer-1 Balance": "以太坊上余额",
+    "Yes, lock my layer-2.": "锁定二层账号",
+    "Locked Balance": "锁定金额",
     "Available to withdraw": "可提现金额",
     "Available to deposit": "可充值金额",
     "Timestamp": "时间",
@@ -122,30 +123,30 @@
     "Show Other Pairs": "显示其它交易对",
     "View More": "查看更多",
     "TimingWhy": "中继对您的请求需要等待至少30个以太坊确认，然后还需要更多的时间生成零知识证明。",
-    "FeeWhy": "路印协议要求我们必须无条件处理所有用户请求（包括注册、重置账号秘钥、充值、和提现）。我们收取费用用以支付中继零知识证明成本和以太坊油费，进而避免被女巫攻击。",
+    "FeeWhy": "路印协议要求我们必须无条件处理所有用户请求（包括激活二层账号、重置二层账号秘钥、充值、和提现）。我们收取费用用以支付中继零知识证明成本和以太坊油费，进而避免被女巫攻击。",
     "DepositInstruction_1": "交易前您需要充值资产到您的交易平台账号。路印交易平台基于路印协议，是非托管的去中心化交易所。这意味着您拥有自己资产百分百的控制权。您还可以随时将自己的资产从交易所提现出去。交易所必须无条件处理所有提现申请。",
     "DepositInstruction_Timing": "充值一般需要5到30分钟。有些情况下则需要一两个小时。请您耐心等待。",
     "DepositInstruction_Fee_1": "充值费用：",
     "DepositInstruction_Fee_2":"。",
     "DepositInstruction_KeepEther": "请在钱包中留一些以太用于提现。",
-    "DepositInstruction_KeepEtherWhy": "我们建议您在钱包中保留一些以太用以支付未来提现需要的手续费（每笔0.002 ETH）和以太坊油费。当我们支持链外提现后，这个需求就没必要了。",
+    "DepositInstruction_KeepEtherWhy": "我们建议您在钱包中保留一些以太用以支付未来提现需要的手续费（每笔0.02 ETH）和以太坊油费。当我们支持链外提现后，这个需求就没必要了。",
     "WithdrawInstruction_1": "根据路印协议的规则，所有用户的提现申请都会被无条件地，按顺序处理。我们无法拒绝任何提现申请。",
     "WithdrawInstruction_Timing": "提现一般需要5到30分钟。有些情况下则需要一两个小时。请您耐心等待。",
     "WithdrawInstruction_Fee_1": "提现费用：",
     "WithdrawInstruction_Fee_2":"。",
     "WithdrawInstructionNotification": "您的提现请求已成功提交到以太坊。请注意观察该笔交易的状态，在它没有被确认前，我们不会为您展示该条提现记录。",
     "WithdrawInstructionNotificationFailed": "您的提现请求失败，请重试！",
-    "LogoutInstruct_1": "退出登录将会清除您浏览器中的账号秘钥。如果忘记了账号秘钥，您可以通过发起以太坊交易设置一个新的账号秘钥。您在交易所的资产不会因为忘记账号秘钥而丢失。",
-    "LogoutInstruct_2": "您确定要退出登录吗？",
-    "AccountBeingRegisteredInstruct_1": "我们正在为您注册交易账号。这需要您的交易有至少一个区块链确认。请耐心等待！",
-    "RegisterAccountInstruction_1": "开始交易前您需要在以太坊上注册一个路印协议账号。注册完成前您无法下单交易或提现，但可以立即进行充值。",
-    "RegisterAccountInstruction_Timing": "注册账号一般需要5到30分钟。有些情况下则需要一两个小时。请您耐心等待。",
-    "RegisterAccountInstruction_Fee_1": "注册费用：",
+    "LogoutInstruct_1": "锁定二层账号将会清除您浏览器中的会话数据。",
+    "LogoutInstruct_2": "您确定要锁定二层账号吗？",
+    "AccountBeingRegisteredInstruct_1": "我们正在为您激活二层账号。这需要您的交易有至少一个区块链确认。请耐心等待！",
+    "RegisterAccountInstruction_1": "开始交易前您需要激活二层账号。激活完成前您无法下单交易或提现，但可以立即进行充值。",
+    "RegisterAccountInstruction_Timing": "激活二层账号一般需要5到30分钟。有些情况下则需要一两个小时。请您耐心等待。",
+    "RegisterAccountInstruction_Fee_1": "激活费用：",
     "RegisterAccountInstruction_Fee_2": "。",
-    "RegisterAccountInstruction_FeeWhy": "为了降低零知识证明的成本，路印协议当前版本仅允许每个去中心化交易所容纳一百万用户。我们收取注册费用一方面是为了支付中继零知识证明成本和以太坊油费，另一方面是为了避免被女巫攻击。",
-    "ResetAccountKeyInstruction_1": "设置不同的账号秘钥将会自动取消您当前委托的所有订单。在重置秘钥期间您将无法提现和下单交易。",
-    "ResetAccountKeyInstruction_Timing": "重置账号秘钥一般需要5到30分钟。有些情况下则需要一两个小时。请您耐心等待。",
-    "ResetAccountKeyInstruction_Fee_1": "重置账号秘钥费用：",
+    "RegisterAccountInstruction_FeeWhy": "为了降低零知识证明的成本，路印协议当前版本仅允许每个去中心化交易所容纳一百万用户。我们收取账号激活费用一方面是为了支付中继零知识证明成本和以太坊油费，另一方面是为了避免被女巫攻击。",
+    "ResetAccountKeyInstruction_1": "设置不同的二层账号秘钥将会自动取消您当前委托的所有订单。在重置秘钥期间您将无法提现和下单交易。",
+    "ResetAccountKeyInstruction_Timing": "重置二层账号秘钥一般需要5到30分钟。有些情况下则需要一两个小时。请您耐心等待。",
+    "ResetAccountKeyInstruction_Fee_1": "重置二层账号秘钥费用：",
     "ResetAccountKeyInstruction_Fee_2": "。",
     "ResetApiKeyInstruction_1": "重置API密钥是免费且即时的。",
     "ResetApiKeyInstruction_2": "重置API密钥后，您将获得一个新密钥，而先前的密钥将无效。",
@@ -156,17 +157,17 @@
     "EthereumGörliTestNet": "以太坊 Görli 测试网。",
     "IsNotAValidMarket": "不是一个我们支持的交易对！",
     "IsNotInviteLink": "不是一个有效的推荐链接！",
-    "AccountHasRegisteredInInviteLink": "地址已经注册过，无法关联推荐链接。",
+    "AccountHasRegisteredInInviteLink": "该账号已经被激活，无法关联推荐链接。",
     "Bug Report": "问题反馈",
     "Your order has been submitted.": "您的订单已提交",
     "Failed to submit your order.": "订单提交失败。",
     "Your order has been cancelled.": "您的订单已取消。",
     "All of your orders have been cancelled successfully.": "您的所有订单已全部取消。",
     "Failed to cancel your order.": "取消订单失败。",
-    "AccountBeingRegisteredNotification": "我们正在为您注册交易账号，这个过程一般需要5到30分钟，有些情况下则需要一两个小时。在等待的过程中您可以对账号进行充值。",
-    "AccountRegistrationFailedNotification": "出了点问题，我们没能帮您成功注册账号。请再试一次！",
-    "AccountKeyResetNotification": "我们正在为您重置账号秘钥，这个过程一般需要5到30分钟，有些情况下则需要一两个小时。在等待的过程中您可以对账号进行充值。",
-    "AccountKeyResetFailedNotification": "出了点问题，我们没能帮您成功重置账号秘钥。请再试一次！",
+    "AccountBeingRegisteredNotification": "我们正在为您激活二层账号，这个过程一般需要5到30分钟，有些情况下则需要一两个小时。在等待的过程中您可以对账号进行充值。",
+    "AccountRegistrationFailedNotification": "出了点问题，我们没能帮您成功激活二层账号。请再试一次！",
+    "AccountKeyResetNotification": "我们正在为您重置二层账号秘钥，这个过程一般需要5到30分钟，有些情况下则需要一两个小时。在等待的过程中您可以对账号进行充值。",
+    "AccountKeyResetFailedNotification": "出了点问题，我们没能帮您成功重置二层账号秘钥。请再试一次！",
     "ApiKeyResetNotification": "重置API密钥成功。",
     "ApiKeyResetFailedNotification": "重置API密钥失败，请再试一次。",
     "Failed to connect to WalletConnect!": "连接WalletConnect失败！",
@@ -178,13 +179,17 @@
     "Switch Wallet": "切换钱包",
     "Retry WalletConnect": "重连WalletConnect",
     "MEW Wallet": "MEW钱包",
+    "Retry MEW Wallet": "重连MEW钱包",
+    "Retry Authereum": "重连Authereum",
+    "Retry Coinbase Wallet": "重连Coinbase钱包",
+    "Coinbase Wallet": "Coinbase钱包",
     "ConnectToWeb3Tip": "使用路印交易所需要您首先解锁以太坊钱包",
     "MetaMaskNotDetected": "没有检测到MetaMask。您必须安装MetaMask才能使用路印DEX！",
-    "Registering Account...": "正在注册账号...",
-    "Resetting Account Key...": "正在重置账号秘钥...",
-    "NoAccountTooltip": "您还没有路印交易账号，请点击下面的按钮注册。",
-    "NeedLoginTooltip": "您已经注册了路印的交易账号。但交易前您必须先登录。",
-    "YouHaveLoggedInTooltip": "您已登录。希望您喜欢路印安全高效的去中心化交易体验！",
+    "Registering Account...": "正在激活二层账号...",
+    "Resetting Account Key...": "正在重置二层账号秘钥...",
+    "NoAccountTooltip": "您二层账号还未被激活，请点击下面的按钮继续。",
+    "NeedLoginTooltip": "请您先解锁二层账号",
+    "YouHaveLoggedInTooltip": "二层账号已经解锁。希望您喜欢路印安全高效的去中心化交易体验！",
     "Powered by Ethereum & Loopring": "基于以太坊和路印协议",
     "DEX Smart Contract (Beta1)": "交易所智能合约（Beta1）",
     "Loopring": "路印 / Loopring",
@@ -213,7 +218,8 @@
     "Stay tuned!": "敬请关注。",
     "CookieConsentMessage": "使用我们的网站即表示您接受我们的",
     "I Agree": "我同意",
-    ", and ": "，和",
+    "and": "和",
+    "here": "这里",
     ", ": "，",
     ".": "。",
     "Terms of Use": "《服务条款》",
@@ -227,8 +233,8 @@
     ". We would appreciate your feedback.": "。我们深表谢意。",
     "Unsupported Network": "不支持的网路",
     "generateKeyPairTip":"提供签名用于生成交易密钥（不会发送以太坊交易）",
-    "registerTxTip":"发送交易请求，用以创建交易账号",
-    "resetAccountKeyTip":"发送交易请求，用以重置账号秘钥",
+    "registerTxTip":"发送交易请求，用以激活二层账号",
+    "resetAccountKeyTip":"发送交易请求，用以重置二层账号秘钥",
     "metaMaskPendingTxTip": "请注意查看MetaMask待处理的请求。有时候MetaMask不会主动弹出对话框，因此您需要点击浏览器右上角MetaMask图标来查看这些交易。",
     "metamaskConfirm": "请通过MetaMask核准以太坊请求",
     "walletConnectConfirm": "请在手机钱包中核准以太坊请求",
@@ -240,13 +246,15 @@
     "depositTipDeposit3": "第3个以太坊交易，用以对路印交易所合约充值。（注：您可以忽略钱包的警告，您的交易会执行成功。）",
     "DepositInstructionNotification": "您的充值请求已成功提交到以太坊。请注意观察该笔交易的状态，在它没有被确认前，我们不会为您展示该条充值记录。",
     "DepositInstructionNotificationFailed": "您的充值请求没有成功，请重试！",
+    "ClaimInstructionNotification":"您的提取请求已成功提交到以太坊，请注意观察该笔交易的状态以及您的余额。",
+    "ClaimInstructionNotificationFailed":"您的提取请求没有成功，请重试！",
     "Show on Etherscan": "在Etherscan上查看",
     "YourEthereumAddressIs": "您在使用的以太坊地址为：",
     "MenuSupportGroup": "支持",
     "MenuTechnicalResourcesGroup": "技术资源",
     "MenuExchangeInfoGroup": "平台信息",
-    "MenuMyEthAccount": "我的以太地址",
-    "MenuMyDexAccount": "我的交易账号",
+    "MenuMyEthAccount": "我的以太地址（一层）",
+    "MenuMyDexAccount": "我的二层账号",
     "MaintenanceModalTitle": "临时打烊",
     "MaintenanceModalInstruction1": "我们正在维护中继系统，请耐心等待。",
     "MaintenanceModalInstruction2": "对此造成的不便，我们深表歉意。",
@@ -270,28 +278,33 @@
     "Exchange API": "交易API",
     "Referral ID / Promotion Code":"推荐人账号ID/活动码",
     "CopyReferralLink":"推荐人专属链接复制成功",
-    "Referral_Instruct_1":"如果您的日均LRC持仓大于5000 LRC，您将享有60%手续费返佣，被邀请人享有20%的手续费返佣。如果日持仓未达到5000LRC，您将享有30%手续费返佣，被邀请人享有10%的手续费返佣。",
+    "Referral_Instruct_1":"如果您的日均LRC持仓大于5000 LRC，您将享有24%手续费返佣，被邀请人享有8%的手续费返佣。如果日持仓未达到5000LRC，您将享有12%手续费返佣，被邀请人享有4%的手续费返佣。",
     "Referral Link":"您的专属推荐链接： ",
     "Copy":"复制",
+    "Mint renBTC with BTC": "铸造renBTC",
     "Staking": "质押锁仓",
-    "Login Successfully":"登录成功！",
-    "LoginFailedIncorrectAccountKey": "登录失败。如果之前您是通过密码登录，现在您需要重置账号秘钥！",
-    "LoginFailedNotification": "奇怪，登录失败了...！请再试一次",
+    "Login Successfully":"二层账号解锁成功！",
+    "LoginFailedIncorrectAccountKey": "未能解锁二层账号。如果之前您是通过密码解锁，现在您需要重置二层账号秘钥！",
+    "LoginFailedNotification": "未能解锁二层账号...！请再试一次",
     "Verifying...":"正在验证...",
     "Authorization failed!":"授权失败！",
-    "LearnAccountKeys":"了解路印如何生成和管理账号秘钥。",
+    "LearnAccountKeys":"了解路印如何生成和管理二层账号秘钥。",
     "Liquidity Mining": "流动性挖矿",
     "Referral Rewards": "推荐奖励",
+    "Maker & Referral Rewards":"推荐&挂单奖励",
+    "Maker Rewards": "挂单奖励",
+    "Referee Rewards": "被推荐人返现",
     "No rewards yet": "您的账号没有奖励记录",
     "Rewards": "奖励",
-    "Total Rewards": "总奖励",
-    "Distributed Rewards": "已分发奖励",
-    "Pending Rewards": "未分发奖励",
+    "Rankings": "排名",
+    "My Total Rewards": "我的总奖励",
+    "My Distributed Rewards": "我的已分发奖励",
+    "My Pending Rewards": "我的未分发奖励",
     "Ranking": "排名",
     "Total Ranking": "总排名",
     "Account ID": "账号ID",
     "NoRankingData": "没有排名数据",
-    "StatusProcessing":"当您的请求（包括注册，重置密码，充值，和提现）获得了30个以太坊确认后，路印的中继会把您的请求和其他用户的请求打包成一个块，接着为这个块生成零知识证明。这个证明保障了路印交易所无法作恶。如果没有接到足够多的请求，中继就会多等待一会。这个等待的过程一般为5到30分钟，偶尔也会更长一点。请您保持耐心，也请您放心：路印协议保障了所有用户的请求一定会被按照顺序全部处理，没有例外。当交易所用户更多更活跃后，请求等待时间就会变得更短。",
+    "StatusProcessing":"当您的请求（包括激活二层账号，重置二层账号私钥，充值，和提现）获得了30个以太坊确认后，路印的中继会把您的请求和其他用户的请求打包成一个块，接着为这个块生成零知识证明。这个证明保障了路印交易所无法作恶。如果没有接到足够多的请求，中继就会多等待一会。这个等待的过程一般为5到30分钟，偶尔也会更长一点。请您保持耐心，也请您放心：路印协议保障了所有用户的请求一定会被按照顺序全部处理，没有例外。当交易所用户更多更活跃后，请求等待时间就会变得更短。",
     "FAQ": "常见问题",
     "Transfer":"转账",
     "Transfers":"转账记录",
@@ -315,5 +328,13 @@
     "Ethereum Address":"以太坊地址",
     "Memo":"备注",
     "Reward":"奖励",
-    "Update Account Reward":"更新账户奖励"
+    "Update Account Reward":"更新账号奖励",
+    "Claim":"提取",
+    "Claimable":"未分发",
+    "liquidity_mining_instruction":"挂单挖矿大赛，支持3个交易对：GRG-ETH, USDC-USDT和USDT-DAI。GRG-ETH交易对给予2,000 USDT的奖励，USDC-USDT交易对给予3,000 USDT的奖励，USDT-DAI交易对给予3,000 USDT的奖励。通过衡量价差比，委托单量，委托单量平衡度按比例发放奖金，详细规则查看",
+    "liquidity_mining_instruction_link":"文章",
+    "liquidity_mining_instruction_end":"。",
+    "liquidity_mining_tools_instruction":"有三款流动性挖矿的工具：",
+    "liquidity_mining_info_instruction":"关于流动性挖矿的详情和奖励规则，请参考",
+    "maintenanceTitle": "很抱歉，网页在维护中。"
 }
